--- a/site/css/style.css
+++ b/site/css/style.css
@@ -24,7 +24,23 @@ p {
     font-size: 1.5rem;
   }
   
+/* Gráfico de pizza com os generos dos livros */
 
+/* Gráfico de pizza com os generos dos livros */
+
+/* Gráfico de pizza com os generos dos livros */
+
+/* Gráfico de pizza com os generos dos livros */
+
+/* Gráfico de pizza com os generos dos livros */
+
+/* Gráfico de pizza com os generos dos livros */
+
+/* Gráfico de pizza com os generos dos livros */
+
+/* Gráfico de pizza com os generos dos livros */
+
+/* Gráfico de pizza com os generos dos livros */
 body{
     display: flex;
     flex-direction: column;
