--- a/site/css/style.css
+++ b/site/css/style.css
@@ -46,7 +46,7 @@ body{
     flex-direction: column;
     align-items: center;
     min-height: 100vh; /* altura mínima */
-    background-color: #5b1f00;
+    background-color: #9a5833;
     color: #ffd7ab
     
 }
@@ -70,4 +70,66 @@ header{
 .logo img{
     
     width: 100%;
+}
+
+header .listaHeader{
+    display: flex;
+    gap: 3rem; 
+    align-items: center;
+    list-style-type: none;
+    margin-right: 20px;
+}
+
+header .listaHeader * {
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: white;
+  }
+
+  header .listaHeader a {
+    text-decoration: none;
+  }
+
+  header .listaHeader .pagAtual{
+    font-size: 110%;
+    text-decoration: underline;
+    color: #ffd7ab;
+  }
+  
+  header .listaHeader a:hover {
+    font-size: 110%;
+    transition: 0.4s;
+    text-decoration: underline;
+    color: #ffd7ab;
+  }
+
+
+
+footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: auto;
+    padding: 1%;
+    width: 100%;
+    background-color: #5b1f00;
+    color: #eaefea;
+    line-height: 26px;
+    text-align: center;
+}
+
+footer div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1%;
+  }
+
+footer .listaFooter {
+    list-style-type: none;
+    margin-top: 5%;
+  }
+
+footer .footerDireito img{
+    width: 100px;
 }
