--- a/public/css/dashboards.css
+++ b/public/css/dashboards.css
@@ -2,6 +2,104 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+
+
+.containerForum{
+  color: white;
+  position: absolute;
+  right: 80px;
+  margin-top: 150px;
+  border: 2px solid red;
+  width: 1100px;
+  height: 600px;
+}
+
+.containerCard{
+  margin-top: 5px; 
+  border: 2px solid green; 
+  width: 1090px; 
+  margin-left: 3px; 
+  height: 290px;
+  display: flex;
+  flex-direction: row;
+}
+
+.cardForum{
+  background-image: url('https://img.freepik.com/vetores-premium/livro-fechado-marrom_135176-141.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  align-items: center; 
+  text-align: center; 
+  margin-left: 6px; 
+  margin-top: 3px; 
+  border: 2px solid blue; 
+  width: 19%;
+  height: 280px;
+}
+
+
+.buttonDesc{
+  margin-bottom: 60px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 body {
   margin: 0;
   padding: 0;
