--- a/public/css/dashboards.css
+++ b/public/css/dashboards.css
@@ -3,8 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
-
-.containerForum{
+.containerForum{ 
   color: white;
   position: absolute;
   right: 80px;
@@ -41,9 +40,53 @@
 
 
 .buttonDesc{
-  margin-bottom: 60px;
+  margin-top: 60px;
 }
 
+.containerDiscussoes{
+  display: none;
+  color: white;
+  position: absolute;
+  right: 30px;
+  margin-top: 50px;
+  border: 2px solid red;
+  width: 1150px;
+  height: 700px;
+}
+
+.discussoes{
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  
+}
+
+.topico{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: 2px solid blue;
+  height: 70px;
+  margin-top: 15px;
+  margin-right: 25px;
+  margin-left: 25px;
+  width: 1100px;
+  cursor: pointer;
+}
+
+.headerTopico{
+  display: flex;
+  justify-content: space-around;
+}
+
+.btnTopico{
+  height: 30px;
+  margin-top: 29px;
+}
+
+.h2Topico{
+  margin-left: 30px;
+}
 
 
 
