--- a/public/css/dashboards.css
+++ b/public/css/dashboards.css
@@ -89,7 +89,13 @@
 }
 
 
-
+.imgPerf{
+  width: 50px;
+  height: 50px; 
+  border-radius: 100%; 
+  margin-top: 10px; 
+  margin-right: 10px;
+}
 
 
 
