--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -1,12 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Barlow', 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: black;
-}
-
 :root {
   --tamanho-header: 80px;
   --tamanho-banner: calc(100vh - var(--tamanho-header) - var(--tamanho-footer) - 2px);
@@ -15,348 +7,250 @@ body {
   --tamanho-footer: 65px;
 }
 
-.container {
-  display: flex;
-  width: 80%;
-  margin: auto;
-}
+/*
+cores:
+  #101030 black, font
+  #381611
+  #a6481b
+  #cc8c37
+  #aa7744
+  #e6aa77
+  #eecd9d
+  #f0cf95
+  #30a0a0 carousel
+  #003050 footer
+  #507090 header, card-hover
+  #6080a0 card-border
+  #70e070 button
+  #60d060 button-hover
+  #eaefea body-background
+  #f0f5f0 card
+*/
 
-.header {
-  height: var(--tamanho-header);
-  border-bottom: 2px solid #32b9cd;
-}
-
-.header .container {
-  justify-content: space-between;
-  align-items: center;
-  height: 100%;
-}
-
-.header a {
-  text-decoration: none;
-  color: #e3b062;
-}
-
-.agora {
-  font-weight: 800;
-}
-
-.navbar {
-  width: 300px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  list-style: none;
-  color: #e3b062;
-}
-
-.titulo {
-  color: #32b9cd;
-  width: fit-content;
-  font-weight: 500;
-}
-
-.header h1 {
-  margin: 0;
-}
-
-/* BANNER */
-
-.banner {
-  height: var(--tamanho-banner);
-  color: white;
-  background-image: url('../assets/imgs/bg-jelly-fish-para-home.png');
-  background-size: cover;
-}
-
-.banner .container {
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-.banner .container p {
-  width: 50%;
+* {
+  box-sizing: border-box; /* o padding e a borda são contados no tamanho definido */
   margin: 0;
   padding: 0;
-  font-size: 36px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.banner .container span {
-  font-weight: 800;
+
+p {
+  font-size: 1.5rem;
 }
 
-/* MISSÃO VISÃO VALORES */
-
-.social {
-  background-color: #e5e5e5;
+body {
   display: flex;
-}
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh; /* altura mínima */
+  background-color: saddlebrown;
+  color: wheat;
+} 
 
-.social .container {
-  justify-content: center;
-}
 
-.box img {
-  width: 170px;
-}
 
-.social .container .boxes {
+.header {
   display: flex;
+  align-items: center;
   justify-content: space-between;
+  padding: 1%;
   width: 100%;
-  padding: 30px 0;
+  background-color: #381611;
 }
 
-.social p {
-  text-align: center;
+.header .logo {
+  height: 85px;
+  width: 385px;
 }
 
-.box {
+.header .navbar {
+  display: flex;
+  gap: 3rem; /* espaço fixo entre 2 itens */
+  align-items: center;
+  list-style-type: none;
+  margin-right: 20px;
+}
+
+.header .navbar * {
+  font-size: 1.3rem;
+  font-weight: bold;
+  color: #eaefea;
+}
+
+.header .navbar a {
+  text-decoration: none;
+}
+
+.header .navbar a:hover {
+  text-decoration: underline;
+  color: #cc8c37;
+}
+
+.header .navbar .sair {
+  transition: color 0.2s; /* cria uma transição para quando determinada propriedade mude, durando determinado tempo */
+  cursor: pointer; /* altera o estilo do cursor */
+  border: none;
+  background-color: transparent;
+}
+
+.header .navbar .sair:hover {
+  color: #e07070;
+  text-decoration: none;
+}
+
+.header .navbar .paginaAtual {
+  font-weight: bold;
+  text-decoration: underline;
+  color: #aa7744
+}
+
+main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 3%;
+  width: 94%;
 }
 
-/* FOOTER */
-
-.footer {
-  background-color: #32b9cd;
-  height: 150px;
-  color: #fff;
-  display: flex;
-  font-size: 15px;
+main hr {
+  margin: 3% 0;
+  border: 1px solid #101030;
+  width: 90%;
 }
 
-.footer .container {
-  justify-content: center;
-  text-align: center;
-}
-
-.footer .container .version {
-  font-size: 12px;
-}
-
-/* LOGIN */
-
-.login {
-  height: var(--tamanho-login);
-  background-image: url('../assets/imgs/bg-jelly-fish-para-home.png');
-  background-size: cover;
-}
-
-.login .container {
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-.card {
-  width: 50%;
-  background-color: #e5e5e5;
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  color: palevioletred;
-  flex-direction: column;
-  height: fit-content;
-  padding: 20px 0;
-}
-
-.card h2 {
-  margin: 0;
-  font-size: 30px;
-}
-
-.formulario {
-  display: flex;
-  height: 90%;
-  width: 80%;
-  justify-content: space-around;
-  flex-direction: column;
-}
-
-.formulario span {
-  font-size: 15px;
-  font-weight: 800;
-}
-
-.formulario input {
-  border: 2px solid #32b9cd;
-  text-align: center;
-  border-radius: 10px;
-  margin: 0;
-}
-
-.formulario select {
-  border: 2px solid #32b9cd;
-  background-color: white;
-  color: gray;
-  height: 36px;
-  text-align: center;
-  border-radius: 10px;
-  margin: 0;
-}
-
-.campo {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  padding: 5px 0;
-}
-
-.botao {
+main button {
+  transition: transform 0.2s, background-color 0.2s;
   cursor: pointer;
-  font-family: "Barlow", sans-serif;
-  border: 0;
   border-radius: 5px;
-  font-weight: 600;
-  font-size: 18px;
+  border: none;
+  padding: 0.5rem;
+  font-family: monospace;
+  font-weight: bold;
   color: #fff;
-  background-color: #e6005a;
-  width: 120px;
-  height: 30px;
-  align-self: center;
-  margin-top: 20px;
 }
 
-.loading-div {
-  width: 50px;
-  display: none;
+main button:hover {
+  /* estilização somente para quando o mouse estiver em cima do elemento */
+  transform: scale(110%, 110%); /* altera o tamanho com base no tamanho atual */
 }
 
-.loading-div img {
-  height: 50px;
-  width: 50px;
+main .error {
+  font-weight: bold;
+  color: red;
 }
 
-#div_erros_login {
-  display: none
-}
-
-/* FORMULARIO */
-
-.alerta_erro{
-  display: flex;
-  justify-content: flex-end;
-}
-
-.card_erro {
-  display: none;
-  background-color: #fff;
-  color: black;
-  width: 230px;
-  position: fixed;
-  border-radius: 4px;
-  border: #e6005a 3px solid;
-  padding: 10px;
-  margin-right: 10%;
-}
-
-.card_erro #mensagem_erro{
-  font-weight: 500;
-  font-size: 20px;
-}
-
-.formulario .tipo_campo {
-  font-size: 20px;
-  font-weight: 600 !important;
-}
-
-.formulario {
+main .section {
   display: flex;
   flex-direction: column;
-}
-
-input {
-  margin-bottom: 10px;
-  border: 2px solid #32b9cd;
-  padding: 10px;
-  text-align: center;
-  border-radius: 10px;
-}
-
-.btn {
-  font-family: "Barlow", sans-serif;
-  border: 0;
-  border-radius: 5px;
-  font-weight: 600;
-  font-size: 18px;
-  padding: 10px 15px;
-  color: white;
-  background-color: #e6005a;
-  width: 120px;
-  align-self: center;
-  margin-top: 5px;
-}
-
-.loading-div {
-  width: 50px;
-  margin: auto;
-  display: none;
-}
-
-.loading-div img {
-  height: 50px;
-  width: 50px;
-}
-
-/* SIMULADOR */
-
-.simulador {
-  color: white;
-}
-
-.simulador .container {
-  flex-direction: column;
-  overflow: scroll; 
-  height: var(--tamanho-simulador);
-}
-
-/* ALERTA */
-
-#alerta {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-}
-
-.mensagem-alarme {
-  background-color: white;
-  border-radius: 5px;
-  width: 300px;
-  height: 80px;
-  margin: 10px;
-  padding: 10px 0;
-  display: flex;
-  justify-content: space-evenly;
   align-items: center;
 }
 
-.mensagem-alarme h3 {
-  font-size: 14px;
-  margin: 0;
+main .section h1 {
+  margin-bottom: 2%;
+  font-size: 45px;
+  text-align: center;
 }
 
-.mensagem-alarme .informacao {
-  width: 66%;
+main .section h2 {
+  margin-bottom: 2%;
+  font-size: 35px; 
 }
 
-.alarme-sino {
-  width: 48px;
-  height: 48px;
-  animation-name: bell;
-  animation-duration: 4s;
-  background-image: url('https://cdn-icons-png.flaticon.com/512/1157/1157000.png');
-  background-size: cover;
-  animation-iteration-count: infinite;
+main .form {
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  border-radius: 8px;
+  padding: 2rem;
+  border: 2px solid #101030;
+  /* background-color: #f0f5f0; */
+  background-color: #f0f5f0;
+  width: fit-content;
 }
 
-@keyframes bell {
-  0%   {transform: rotate(25deg)}
-  25%  {transform: rotate(-25deg)}
-  50%  {transform: rotate(25deg)}
-  75%  {transform: rotate(-25deg)}
-  100% {transform: rotate(25deg)}
+main .form .inputs {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  align-items: center;
+}
+
+main .form .inputs label {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  align-items: flex-start;
+  border-radius: 5px;
+}
+main .form .inputs span {
+  font-weight: bold;
+  color: #101030;
+  text-align: center;
+}
+main .form .inputs input {
+  border-radius: 5px;
+  padding: 0.5rem;
+  width: 25rem;
+  color: #101030;
+  height: 40px;
+}
+main select {
+  border-radius: 5px;
+  border: 2px solid #101030;
+  padding: 0.5rem;
+  width: 31rem;
+  height: 40px;
+  font-weight: bold;
+  color: #101030;
+}
+main .form button {
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+main .form .inputs .campo_obrigatorio {
+  color: #19A7A8;
+}
+
+
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: auto;
+  padding: 1%;
+  width: 100%;
+  background-color: #381611;
+  color: #eaefea; 
+  line-height: 26px;
+  text-align: center;
+}
+footer div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1%;
+}
+footer div ul {
+  list-style-type: none;
+  margin-top: 5%;
+}
+footer .contact .logo {
+  height: 10rem;
+}
+
+.meioFooter{
+  margin-right: 50px;
+}
+
+.meioFooter img{
+  width: 250px;
+}
+
+.meioFooter p{
+  margin-top: 25px;
+  font-size: 15px;
 }
