adicionando novo header nas telas da dashboard

--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -102,7 +102,8 @@ body {
 .header .navbar .paginaAtual {
   font-weight: bold;
   text-decoration: underline;
-  color: #aa7744
+  color: #aa7744;
+  cursor: pointer;
 }
 
 main {
