--- a/public/css/dashboards.css
+++ b/public/css/dashboards.css
@@ -1,5 +1,17 @@
 /* pagina mural */
 
+/*
+cores:
+  #101030 black, font
+  #381611
+  #a6481b
+  #cc8c37
+  #aa7744
+  #e6aa77
+  #eecd9d
+  #f0cf95
+  */
+
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
@@ -15,18 +27,26 @@ body {
   align-self: center;
 }
 
-#containerRecomendAI{
-    display: flex;
-    color: white;
-    position: absolute;
-    right: 30px;
-    margin-top: 50px;
-    border: 2px solid red;
-    width: 1150px;
-    height: 700px;
-    flex-direction: column;
-  
+.hello {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
 }
+
+.hello h3 {
+  color: #e3b062;
+  font-weight: 300;
+  font-size: 1.2rem;
+}
+
+.hello h3 span {
+  font-weight: 800;
+}
+
+
+
 
 
 
@@ -145,18 +165,6 @@ body {
   align-self: center;
 }
 
-.inputBox {
-  position: absolute;
-  bottom: 5px;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  margin-top: auto;
-  height: 60px;
-  margin-bottom: 15px;
-  justify-content: center;
-  align-items: center;
-}
 
 .inputDiv {
   width: 1000px;
@@ -265,8 +273,16 @@ body {
 
 
 
+.botaoSair{
+  cursor: pointer;
+  color: red;
+}
 
+.botaoSair:hover{
+  cursor: pointer;
 
+  color: red;
+}
 
 
 
@@ -672,21 +688,7 @@ canvas {
   color: #32b9cd;
 }
 
-.hello {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
 
-.hello h3 {
-  color: #e3b062;
-  font-weight: 300;
-  font-size: 1.2rem;
-}
-
-.hello h3 span {
-  font-weight: 800;
-}
 
 .btn-nav {
   width: 40%;
@@ -712,21 +714,8 @@ canvas {
   margin: 0;
 }
 
-.btn-nav h3,
-.btn-logout h3 {
+.btn-nav h3 {
   margin: 0;
   padding: 0;
 }
 
-.btn-logout {
-  margin: 0;
-  padding: 0;
-  width: 20%;
-  background-color: #32b9cd;
-  color: white;
-  border-radius: 10px;
-  text-align: center;
-  padding: 10px 15px;
-  margin-bottom: 100px;
-  cursor: pointer;
-}
