--- a/public/css/forum.css
+++ b/public/css/forum.css
@@ -10,110 +10,221 @@ cores:
   #f0cf95
   */
 
-.divBotaoForum{
-    margin-top: 20px;
-    min-width: 500px;
-    align-items: center;
-    text-align: center;
+.divBotaoForum {
+  margin-top: 20px;
+  min-width: 500px;
+  align-items: center;
+  text-align: center;
 }
 
 .botaoForum{
-    transition: transform 0.2s, background-color 0.2s;
-    cursor: pointer;
-    border-radius: 5px;
-    border: 2px solid #381611;
-    padding: 0.5rem;
-    font-family: monospace;
-    font-weight: bold;
-    font-size: 25px;
-    background-color: #f0cf95;
-    width: 150px;
+  transition: transform 0.2s, background-color 0.2s;
+  cursor: pointer;
+  border-radius: 5px;
+  border: 2px solid #381611;
+  padding: 0.5rem;
+  font-family: monospace;
+  font-weight: bold;
+  font-size: 25px;
+  background-color: #f0cf95;
+  width: 150px;
 }
 
 
 .botaoForum:hover {
-    transform: scale(110%, 110%);
-    background-color: #e6aa77;
-  }
-  
-
-  .containerForum{ 
-    padding: 15px;
-    color: white;
-    margin-top: 50px;
-    background-color: #381611;
-    margin-bottom: 30px;
-    border-radius: 13px;
-  }
+  transform: scale(110%, 110%);
+  background-color: #e6aa77;
+}
 
 
-  .containerCard{
-    
-    margin: 20px; 
-    width: 1290px; 
-    height: 310px;
-    display: flex;
-    flex-direction: row;
-    background-color: #e6aa77;
-    justify-content: space-around;
-  }
+.containerForum {
+  padding: 15px;
+  color: white;
+  margin-top: 50px;
+  background-color: #381611;
+  margin-bottom: 30px;
+  border-radius: 13px;
+}
 
 
-  .cardForum {
-    position: relative;
-    align-items: center;
-    text-align: center;
-    margin-top: 14px;
-    border-radius: 10px;
-    border: 22px solid #aa7744;
-    width: 220px;
-    height: 280px;
-    cursor: pointer;
-    overflow: hidden;
+.containerCard {
+
+  margin: 20px;
+  width: 1290px;
+  height: 310px;
+  display: flex;
+  flex-direction: row;
+  background-color: #e6aa77;
+  justify-content: space-around;
+}
+
+
+.cardForum {
+  position: relative;
+  align-items: center;
+  text-align: center;
+  margin-top: 14px;
+  border-radius: 10px;
+  border: 22px solid #aa7744;
+  width: 220px;
+  height: 280px;
+  cursor: pointer;
+  overflow: hidden;
 }
 
 .cardForum img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: opacity 0.2s;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: opacity 0.2s;
 }
 
 .cardForum h1 {
   margin-top: 60px;
-    position: absolute;
-    color: #381611;
-    display: none;
-    z-index: 1;
+  position: absolute;
+  color: #381611;
+  display: none;
+  z-index: 1;
 }
 
 .cardForum:hover img {
-    opacity: 0.4;
+  opacity: 0.4;
 }
 
 .cardForum:hover {
-    transition: transform 0.2s, border 0.3s;
-    border: 10px solid #e6aa77;
-    border-radius: 7px;
-    transform: scale(1.1);
+  transition: transform 0.2s, border 0.3s;
+  border: 10px solid #e6aa77;
+  border-radius: 7px;
+  transform: scale(1.1);
 }
 
 .cardForum:hover h1 {
-    display: block;
+  display: block;
+}
+
+#divCadastrarForum{
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+}
+
+.boxCadastrarForum {
+  border: 3px solid #381611;
+  border-radius: 7%;
+  margin-top: 40px;
+  justify-content: space-around;
+  flex-direction: column;
+  display: flex;
+  height: 300px;
+  width: 500px;
+  align-items: center;
+  text-align: center;
+  background-color: sienna;
+}
+
+.boxCadastrarForum p {
+  margin-top: 10px;
+  font-size: 18px;
+
+}
+
+.boxCadastrarForum input{
+  margin-top: 15px;
+  background-color: sienna;
+  border: none;
+  border-bottom: 2px solid #381611;
+}
+
+.boxCadastrarForum input:focus{
+  background-color: transparent;
+  padding: none;
+  border: none;
+  outline: none;
+  border-bottom: 2px solid #381611;
+}
+
+.containerDiscussoes{
+  padding: 15px;
+  color: white;
+  margin-top: 50px;
+  background-color: #381611;
+  margin-bottom: 30px;
+  border-radius: 13px;
+
+
+
+}
+
+.headerTopico{
+  display: flex;
+  flex-direction: column;
+  height: 180px;
+  align-items: center;
+  text-align: center;
+}
+
+.divHeaderTopico{
+  width: 70%;
+  display: flex;
+  height: 130px;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+
+.btnTopico{
+  transition: transform 0.2s, background-color 0.2s;
+  cursor: pointer;
+  border-radius: 5px;
+  border: 2px solid  #e6aa77;
+  padding: 0.5rem;
+  font-family: monospace;
+  font-weight: bold;
+  font-size: 25px;
+  background-color: #f0cf95;
+  width: 150px;
+  height: 80px;
 }
 
 
 
+.btnTopico:hover {
+  transform: scale(110%, 110%);
+  background-color: #e6aa77;
+}
+
+.topico{
+  color: #381611;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  height: 70px;
+  margin-top: 15px;
+  margin-right: 25px;
+  margin-left: 25px;
+  width: 1000px;
+  cursor: pointer;
+  background-color: #e6aa77;
+  border-radius: 10px;
+}
 
 
+.topico:hover{
+  transition: transform 0.7s;
+  transform: scale(1.1);
+
+}
 
 
+.topico h2{
+  margin-left: 20px ;
+}
 
 
-
-
-
-
+.topico img{
+  margin-right: 20px;
+}
 /*
       .cardForum{
          background-image: url('https://img.freepik.com/vetores-premium/livro-fechado-marrom_135176-141.jpg'); 
@@ -155,4 +266,4 @@ cores:
             display: block;
           }
         
-*/    
+*/
