adicionando funcionalidade de acessar no botao topico e alterando o css

--- a/public/css/forum.css
+++ b/public/css/forum.css
@@ -143,6 +143,27 @@ cores:
   border-bottom: 2px solid #381611;
 }
 
+.boxCadastrarForum button {
+  transition: background-color 0.2s, color 0.2s;
+  cursor: pointer;
+  border-radius: 5px;
+  color: #f0cf95;
+  border: 2px solid #f0cf95;
+  padding: 0.5rem;
+  font-family: monospace;
+  font-weight: bold;
+  font-size: 20px;
+  background-color: #381611;
+  width: 120px;
+  margin-bottom: 15px;
+}
+
+.boxCadastrarForum button:hover{
+  color: #381611;
+  background-color: #e6aa77;
+}
+
+
 .containerDiscussoes{
   display: none;
   padding: 15px;
