--- a/public/css/livros.css
+++ b/public/css/livros.css
@@ -1,11 +1,23 @@
+/*
+cores:
+  #101030 black
+  #381611
+  #a6481b
+  #cc8c37
+  #aa7744
+  #e6aa77
+  #eecd9d
+  #f0cf95
+  */
+
+
 .containerLivros{
-    color: white;
-    position: absolute;
-    right: 30px;
-    margin-top: 50px;
-    border: 2px solid red;
-    width: 1150px;
-    height: 700px;
+  padding: 15px;
+  color: white;
+  margin-top: 50px;
+  background-color: #381611;
+  margin-bottom: 30px;
+  border-radius: 13px;  
   }
 
   .cadastrarLivros{
@@ -19,11 +31,11 @@
 
 
   .containerCardLivros{
-    margin-top: 5px; 
-    border: 2px solid green; 
-    width: 1090px; 
-    margin-left: 3px; 
-    height: 290px;
+    margin: 20px;
+    width: 1290px;
+    height: 310px;
     display: flex;
     flex-direction: row;
+    background-color: #e6aa77;
+    justify-content: space-around;
   }
