--- a/public/css/livros.css
+++ b/public/css/livros.css
@@ -11,6 +11,103 @@ cores:
   */
 
 
+  .divBotaoLivro {
+    display: flex; /* flex*/
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 20px;
+    width: 900px;
+    align-items: center;
+    text-align: center;
+  }
+
+
+
+
+  .botaoLivro{
+    transition: transform 0.2s, background-color 0.2s;
+    cursor: pointer;
+    border-radius: 5px;
+    border: 2px solid #381611;
+    padding: 0.5rem;
+    font-family: monospace;
+    font-weight: bold;
+    font-size: 25px;
+    background-color: #f0cf95;
+    width: 150px;
+  }
+  
+  
+  .botaoLivro:hover {
+    transform: scale(110%, 110%);
+    background-color: #e6aa77;
+  }
+
+  .botaoFiltro{
+    width: 170px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    height: 70px;
+  }
+
+
+  .divFiltro{
+    flex-direction: row;
+    display: flex;
+    width: 500px;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 300px ;
+  }
+
+  .divFiltros{
+    display: none;
+    height: 120px; 
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .divFiltros select{
+    cursor: pointer;
+    border: 2px solid #381611;
+    font-family: monospace;
+    font-size: 18px;
+    background-color: #f0cf95;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 40px;
+    width: 206px;
+    border-radius: 10px;
+  }
+
+  .divFiltros select option{
+    cursor: pointer;
+    font-family: monospace;
+  }
+
+  
+  .divFiltros select option.custom-hover{
+  background-color: #e6aa77;  
+  }
+
+
+
+ 
+  .botaoFiltro img{
+    margin-right: 10px;
+    width: 55px;
+    height: 50px;
+    margin-top: 7px;
+
+  }
+
+
+
+
 .containerLivros{
   padding: 15px;
   color: white;
@@ -38,4 +135,17 @@ cores:
     flex-direction: row;
     background-color: #e6aa77;
     justify-content: space-around;
+  }
+
+  .cardForum {
+    position: relative;
+    align-items: center;
+    text-align: center;
+    margin-top: 14px;
+    border-radius: 10px;
+    border: 22px solid #aa7744;
+    width: 220px;
+    height: 280px;
+    cursor: pointer;
+    overflow: hidden;
   }
