--- a/public/css/livros.css
+++ b/public/css/livros.css
@@ -70,7 +70,7 @@ cores:
     align-items: center;
   }
 
-  .divFiltros select{
+  .divFiltros select , .ladoDireitoCadastro select{
     cursor: pointer;
     border: 2px solid #381611;
     font-family: monospace;
@@ -84,13 +84,17 @@ cores:
     border-radius: 10px;
   }
 
-  .divFiltros select option{
+  .ladoDireitoCadastro select{
+    margin-top: 50px;
+  }
+
+  .divFiltros select option, .ladoDireitoCadastro select option{
     cursor: pointer;
     font-family: monospace;
   }
 
   
-  .divFiltros select option.custom-hover{
+  .divFiltros select option.custom-hover , .ladoDireitoCadastro select option.custom-hover{
   background-color: #e6aa77;  
   }
 
@@ -106,27 +110,83 @@ cores:
   }
 
 
-
-
-.containerLivros{
-  padding: 15px;
-  color: white;
-  margin-top: 50px;
-  background-color: #381611;
-  margin-bottom: 30px;
-  border-radius: 13px;  
-  }
-
   .cadastrarLivros{
+    border: 3px solid #381611;
+    border-radius: 7%;
+    margin-top: 40px;
+    justify-content: space-around;
+    flex-direction: column;
     display: none;
-    position: absolute;
-    background-color: brown;
-    width: 500px;
+    width: 900px;
     align-items: center;
     text-align: center;
+    
+    background-color: sienna;
   }
 
+  .containerCadastro{
+    width: 450px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 
+  }
+
+  .containerCadastro p {
+    margin-top: 10px;
+    font-size: 18px;
+  
+  }
+  
+  .containerCadastro input{
+    font-size: 15px;
+    color: #f0cf95;
+    margin-top: 15px;
+    background-color: sienna;
+    border: none;
+    border-bottom: 2px solid #381611;
+  }
+  
+  .containerCadastro input:focus{
+    background-color: transparent;
+    padding: none;
+    border: none;
+    outline: none;
+    border-bottom: 3px solid #381611;
+  }
+  
+  .cadastrarLivros button {
+    margin-top: 15px;
+    transition: background-color 0.2s, color 0.2s;
+    cursor: pointer;
+    border-radius: 5px;
+    color: #f0cf95;
+    border: 2px solid #f0cf95;
+    padding: 0.5rem;
+    font-family: monospace;
+    font-weight: bold;
+    font-size: 20px;
+    background-color: #381611;
+    width: 120px;
+    margin-bottom: 15px;
+  }
+  
+  .cadastrarLivros button:hover{
+    color: #381611;
+    background-color: #e6aa77;
+  }
+  
+
+
+  .containerLivros{
+    padding: 15px;
+    color: white;
+    margin-top: 50px;
+    background-color: #381611;
+    margin-bottom: 30px;
+    border-radius: 13px;  
+    }
+  
   .containerCardLivros{
     margin: 20px;
     width: 1290px;
@@ -149,3 +209,34 @@ cores:
     cursor: pointer;
     overflow: hidden;
   }
+
+  
+.cardForum img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: opacity 0.2s;
+}
+
+.cardForum h1 {
+  margin-top: 60px;
+  position: absolute;
+  color: #381611;
+  display: none;
+  z-index: 1;
+}
+
+.cardForum:hover img {
+  opacity: 0.4;
+}
+
+.cardForum:hover {
+  transition: transform 0.2s, border 0.3s;
+  border: 10px solid #e6aa77;
+  border-radius: 7px;
+  transform: scale(1.1);
+}
+
+.cardForum:hover h1 {
+  display: block;
+}
