--- a/public/css/usuario.css
+++ b/public/css/usuario.css
@@ -1,5 +1,6 @@
 /*
 cores:
+  #000000
   #101030 black
   #381611
   #a6481b
@@ -9,3 +10,114 @@ cores:
   #eecd9d
   #f0cf95
   */
+
+.janelaUsuario{
+    width: 99%;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 35px;
+}
+
+
+
+
+.perfilUsuario{
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.containerFotoPerfil{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.containerFotoPerfil h1{
+    margin-top: 15px;
+}
+
+.containerFotoPerfil img{
+    margin-top: 20px;
+    width: 300px;
+}
+
+#generosPref{
+    color: #381611;
+}
+
+.containerFotoPerfil button, .alterarPerfil button{
+    margin-top: 15px;
+    transition: background-color 0.2s, color 0.2s;
+    cursor: pointer;
+    border-radius: 5px;
+    color: #f0cf95;
+    border: 2px solid #f0cf95;
+    padding: 0.5rem;
+    font-family: monospace;
+    font-weight: bold;
+    font-size: 20px;
+    background-color: #381611;
+    width: 120px;
+    margin-bottom: 15px;
+}
+
+
+.containerFotoPerfil button:hover, .alterarPerfil button:hover{
+    color: #381611;
+    background-color: #e6aa77;
+}
+
+
+.alterarPerfil{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    text-align: center;
+    align-items: center;
+}
+
+.alterarPerfil span{
+    display: block;
+    margin-bottom: 10px;
+}
+
+.graficoUsuario{
+    width: 50%;
+}
+
+
+
+.alterarPerfil input{
+    font-size: 15px;
+    color: #f0cf95;
+    margin-top: 15px;
+    background-color: saddlebrown;
+    border: none;
+    border-bottom: 2px solid #381611;
+  }
+  
+  .alterarPerfil input:focus{
+    background-color: transparent;
+    padding: none;
+    border: none;
+    outline: none;
+    border-bottom: 3px solid #381611;
+  }
+
+  .alterarPerfil input::placeholder{
+    color: #e6aa77;
+  }
+
+  #sectionCanvas1{
+    width: 95vw;
+    border-radius: 20px;
+    background-color: #f0cf95;
+    display: flex;
+    justify-content: center;
+    padding: 10px 0 60px 0;
+  }
+
+  
