--- a/public/css/usuario.css
+++ b/public/css/usuario.css
@@ -16,13 +16,19 @@ cores:
     display: flex;
     flex-direction: row;
     margin-bottom: 35px;
+    justify-content: space-around;
 }
 
 
 
 
 .perfilUsuario{
-    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.containerPerfilUsuario{
+    width: 160%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -47,7 +53,7 @@ cores:
     color: #381611;
 }
 
-.containerFotoPerfil button, .alterarPerfil button{
+.containerFotoPerfil button, .alterarPerfil button, .alteracaoImagem button{
     margin-top: 15px;
     transition: background-color 0.2s, color 0.2s;
     cursor: pointer;
@@ -62,11 +68,25 @@ cores:
     width: 120px;
     margin-bottom: 15px;
 }
+.alterarPerfil button{
+    margin-top: 20px;
+}
 
 
-.containerFotoPerfil button:hover, .alterarPerfil button:hover{
+.containerFotoPerfil button:hover, .alterarPerfil button:hover, .alteracaoImagem button:hover{
     color: #381611;
     background-color: #e6aa77;
+}
+
+.alteracaoImagem{
+    width: 500px;
+    margin-left: -60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: space-between;
+    height: 200px;
 }
 
 
@@ -90,7 +110,7 @@ cores:
 
 
 
-.alterarPerfil input{
+.alterarPerfil input, .alteracaoImagem input{
     font-size: 15px;
     color: #f0cf95;
     margin-top: 15px;
@@ -99,7 +119,7 @@ cores:
     border-bottom: 2px solid #381611;
   }
   
-  .alterarPerfil input:focus{
+  .alterarPerfil input:focus, .alteracaoImagem input:focus{
     background-color: transparent;
     padding: none;
     border: none;
