adicionando inseerts no script do banco para contigencia da apresentação

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -70,7 +70,7 @@ main main h1 {
 
 
   main .introducao{
-    background-image: url('../assets/imgs/fundoLivro2\ \(2\).jpeg');
+    background-image: url('../assets/imgs/fundo5.webp');
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: bottom;
