--- a/public/css/bobia.css
+++ b/public/css/bobia.css
@@ -17,9 +17,9 @@ cores:
 }
 
 .leftDiv{
-  margin-left: -0.4%;
-  width: 25%;
-  height: 1100px;
+  margin-left: -0.6%;
+  width: 22%;
+  height: 84vh;
   background-color: #3e1a14;
   justify-content: space-evenly;
   color: white;
@@ -31,20 +31,79 @@ cores:
 
 
 .topics {
+  height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   width: 100%;
   align-items: center;
   gap: 2rem;
   font-size: 25px;
 }
 
-.topics button {
-  width: 85%;
+
+.headerTopicos{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 95%;
+  height: 25%;
+}
+
+
+#divConversas{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 90%;
+  height: 60%;
+  gap: 20px;
+}
+
+
+.headerTopicos button, #divConversas button {
+  font-weight: bold;
+  font-family: monospace;
+  justify-content: space-around;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  width: 90%;
   background-color: #cc8c37;
   font-size: 25px;
   cursor: pointer;
+
+  border-radius: 6px;
   
+
+  transition: transform 0.2s;
+}
+
+.headerTopicos button{
+  height: 32%;  
+}
+
+#divConversas button{
+  width: 100%;
+  min-height: 55px;
+  background-color: #805225;
+  color: #f0cf95;
+}
+
+
+.headerTopicos button:hover, #divConversas button:hover{
+  transform: scale(110%, 110%);
+}
+
+.imgSalvar{
+  width: 35px;
+  
+}
+
+.btnSalvar:nth-of-type(1) {
+  gap: 26px;
 }
 
 
