--- a/public/css/livros.css
+++ b/public/css/livros.css
@@ -269,6 +269,23 @@ cores:
   text-align: center;
   justify-content: space-between;
 }
+.containerHeaderLivro{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.containerHeaderLivro button{
+  align-self: flex-end;
+  width: 40px;
+  height: 40px;
+  background-color: #e6aa77;
+  cursor: pointer;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+
 
 .containerLivroEscolhido{
   width: 95%;
