--- a/public/css/dashboards.css
+++ b/public/css/dashboards.css
@@ -22,6 +22,14 @@ body {
   font-family: 'Barlow', 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.botaoSair{
+  transition: transform 0.2s;
+}
+
+.botaoSair:hover{
+  transform: scale(110%, 110%);
+}
+
 
 
 .tituloRecomendai{
